--- a/ASSETS/CSS/css_exo_10.css
+++ b/ASSETS/CSS/css_exo_10.css
@@ -1,27 +1,29 @@
-#mainConteneur
+#mainContainer
 {
      display: flex;
      flex-wrap: wrap;
+
+    height: 150px;
   }
 .bloc1
 {
     background-color: #2ecc71;
     width: 80%;
-    height: 20px;
+    height: 20%;
 }
 .bloc2
 {
     background-color: #2980b9;
     width: 20%;
-    height: 20px;
+    height: 20%;
 }
 .bloc3
 {
     background-color:#e74c3c;
     width: 34%;
-    height: 50px;
+    height: 40%;
     }
-#conteneur1
+#container1
     {
          display: flex;
          flex-wrap: wrap;
@@ -31,35 +33,35 @@
 {
     background-color: #e67e22;
     width: 50%;
-    height: 25px;
+    height: 50%;
 }
 .bloc5
 {
     background-color: #95a5a6;
     width: 50%;
-    height: 25px;
+    height: 50%;
 }
 .bloc6
 {
     background-color: #f39c12;
     width: calc(100% / 3);
-    height: 25px;
+    height: 50%;
 }
 .bloc7
 {
     background-color: #16a085;
     width: calc(100% / 3);
-    height: 25px;
+    height: 50%;
 }
 .bloc8
 {
     background-color:#d35400;
     width: calc(100% / 3);
-    height: 25px;
+    height: 50%;
 }
 .bloc9
 {
     background-color: #2c3e50;
     width: 100%;
-    height: 50px;
+    height: 40%;
 }
