--- a/ASSETS/CSS/css_exo_10.css
+++ b/ASSETS/CSS/css_exo_10.css
@@ -1,9 +1,12 @@
+body
+{
+    margin: 0;
+}
 #mainContainer
 {
-     display: flex;
-     flex-wrap: wrap;
-
-    height: 150px;
+  display: flex;
+  flex-wrap: wrap;
+  height: 150px;
   }
 .bloc1
 {
@@ -20,14 +23,16 @@
 .bloc3
 {
     background-color:#e74c3c;
-    width: 34%;
+    width: 30%;
     height: 40%;
-    }
+}
 #container1
     {
          display: flex;
          flex-wrap: wrap;
-         width: 66%;
+         width: 70%;
+         height: 40%;
+         
     }
 .bloc4
 {
